src/test/resources/typeSystemTestModels/valid/constructors/ConstructorNoDuplicateModifier.java
package typeSystemTestModels.valid.constructors;

public class ConstructorNoDuplicateModifier {

  public ConstructorNoDuplicateModifier(){

  }
}
