src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/MyClass.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class MyClass<X> {
  <T> MyClass(T t) {


  }
}
